# Personal-Templates

./: README.md  _typos.toml  pyproject.toml
notebooks/: example_use_mpl_styles.py
pandoc/: PANDOC_README.md  references.bib
pandoc/filters/: bquote.lua  ctable.lua  fig.lua  gitH.lua  links.lua  table.lua  wiki.lua
pandoc/styles/: glossary.latex  preamble.latex  template.latex
pandoc/styles/csls/: chicago-fullnote-bibliography-short-title-subsequent.csl  chicago-fullnote-bibliography.csl
